@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* Added sample course to fresh CoursePress installation.
 
 = 2.0.5 =
 -------------------------------------------------
